--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,4 @@
-/* @import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600&display=swap");
 
 * {
   margin: 0;
@@ -43,4 +43,4 @@ h2::before {
   90% {
     width: 100%;
   }
-} */
+}
